fix(jellyseerr): add db type env

--- a/kubernetes/apps/default/jellyseerr/app/externalsecret.yaml
+++ b/kubernetes/apps/default/jellyseerr/app/externalsecret.yaml
@@ -18,6 +18,7 @@ spec:
         DB_PASS: &dbPass "{{ .JELLYSEERR_POSTGRES_PASSWORD }}"
         DB_NAME: &dbName "jellyseerr"
         DB_LOG_QUERIES: "false"
+        DB_TYPE: "postgres"
         INIT_POSTGRES_DBNAME: *dbName
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_USER: *dbUser
