--- a/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/jellyseerr/app/helmrelease.yaml
@@ -100,14 +100,18 @@ spec:
                   port: http
     persistence:
       config:
-        type: emptyDir
+        existingClaim: jellyseerr
         globalMounts:
           - path: /app/config
-        sizeLimit: 1Gi
       config-cache:
         existingClaim: jellyseerr-cache
         globalMounts:
           - path: /app/config/cache
+      config-logs:
+        type: emptyDir
+        globalMounts:
+          - path: /app/config/logs
+        sizeLimit: 1Gi
       tmp:
         type: emptyDir
         sizeLimit: 1Gi
