--- a/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/homelab/helmrelease.yaml
+++ b/kubernetes/apps/actions-runner-system/actions-runner-controller/runners/homelab/helmrelease.yaml
@@ -64,7 +64,7 @@ spec:
             env:
               - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
                 value: "false"
-              - name: NODE_IP
+              - name: NODE
                 valueFrom:
                   fieldRef:
                     fieldPath: status.hostIP
