--- a/kubernetes/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/bootstrap/apps/helmfile.yaml
@@ -8,8 +8,6 @@ helmDefaults:
 repositories:
   - name: cilium
     url: https://helm.cilium.io
-  - name: coredns
-    url: https://coredns.github.io/helm
   - name: jetstack
     url: https://charts.jetstack.io
 releases:
@@ -27,7 +25,7 @@ releases:
       - observability/kube-prometheus-stack-crds
   - name: coredns
     namespace: kube-system
-    chart: coredns/coredns
+    chart: oci://ghcr.io/coredns/charts/coredns
     version: 1.39.0
     values:
       - ../../apps/kube-system/coredns/app/helm-values.yaml
