feat: use coredns oci artifact

--- a/kubernetes/flux/meta/repositories/helm/coredns.yaml
+++ b/kubernetes/flux/meta/repositories/helm/coredns.yaml
@@ -6,5 +6,6 @@ metadata:
   name: coredns
   namespace: flux-system
 spec:
-  interval: 12h
-  url: https://coredns.github.io/helm
+  type: oci
+  interval: 30m
+  url: oci://ghcr.io/coredns/charts
