--- a/kubernetes/apps/flux-system/flux-operator/instance/github/notifications/notification.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/instance/github/notifications/notification.yaml
@@ -5,7 +5,7 @@ metadata:
   name: github
 spec:
   type: github
-  address: ssh://git@github.com/solanyn/homelab
+  address: ssh://git@github.com/solanyn/home-ops
   secretRef:
     name: github-token-secret
 ---
