--- a/kubernetes/apps/flux-system/flux-operator/instance/helm-values.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/instance/helm-values.yaml
@@ -11,7 +11,7 @@ instance:
     - notification-controller
   sync:
     kind: GitRepository
-    url: ssh://git@github.com/solanyn/homelab
+    url: ssh://git@github.com/solanyn/home-ops
     ref: refs/heads/main
     path: kubernetes/flux/cluster
     pullSecret: github-deploy-key
