--- a/kubernetes/apps/flux-system/flux-operator/instance/kustomization.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/instance/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
   - ./github
   - ./helmrelease.yaml
   - ./prometheusrule.yaml
+  - ./webhook
 configMapGenerator:
   - name: flux-instance-helm-values
     files:
