--- a/kubernetes/flux/components/alerts/alertmanager/provider.yaml
+++ b/kubernetes/flux/components/alerts/alertmanager/provider.yaml
@@ -3,7 +3,7 @@
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Provider
 metadata:
-  name: alert-manager
+  name: alertmanager
 spec:
   type: alertmanager
   address: http://alertmanager-operated.observability.svc.cluster.local:9093/api/v2/alerts/
