feat: use cloudflare api token instead of api key

--- a/kubernetes/apps/cert-manager/cert-manager/issuers/externalsecret.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/externalsecret.yaml
@@ -11,7 +11,7 @@ spec:
     name: cloudflare-secret
     template:
       data:
-        CLOUDFLARE_API_TOKEN: "{{ .CERT_MANAGER_API_TOKEN }}"
+        CLOUDFLARE_DNS_TOKEN: "{{ .CLOUDFLARE_DNS_TOKEN }}"
   dataFrom:
     - extract:
         key: cloudflare
