--- a/kubernetes/apps/cert-manager/cert-manager/issuers/issuers.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/issuers/issuers.yaml
@@ -14,29 +14,7 @@ spec:
           cloudflare:
             apiTokenSecretRef:
               name: cloudflare-secret
-              key: CLOUDFLARE_API_TOKEN
-        selector:
-          dnsZones:
-            - goyangi.cloud
-            - solanyn.dev
----
-# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cert-manager.io/clusterissuer_v1.json
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-staging
-spec:
-  acme:
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
-    email: andrew@goyangi.cloud
-    privateKeySecretRef:
-      name: letsencrypt-staging
-    solvers:
-      - dns01:
-          cloudflare:
-            apiTokenSecretRef:
-              name: cloudflare-secret
-              key: CLOUDFLARE_API_TOKEN
+              key: CLOUDFLARE_DNS_TOKEN
         selector:
           dnsZones:
             - goyangi.cloud
