--- a/kubernetes/apps/network/external/external-dns/externalsecret.yaml
+++ b/kubernetes/apps/network/external/external-dns/externalsecret.yaml
@@ -12,8 +12,7 @@ spec:
     name: external-external-dns-secret
     template:
       data:
-        CF_API_EMAIL: "{{ .CLOUDFLARE_EMAIL }}"
-        CF_API_KEY: "{{ .CLOUDFLARE_API_KEY }}"
+        CF_API_TOKEN: "{{ .CLOUDFLARE_DNS_TOKEN }}"
   dataFrom:
     - extract:
         key: cloudflare
