--- a/kubernetes/apps/network/external/external-dns/helmrelease.yaml
+++ b/kubernetes/apps/network/external/external-dns/helmrelease.yaml
@@ -29,15 +29,10 @@ spec:
     provider:
       name: cloudflare
     env:
-      - name: &name CF_API_EMAIL
+      - name: &name CF_API_TOKEN
         valueFrom:
           secretKeyRef:
             name: &secret external-external-dns-secret
-            key: *name
-      - name: &name CF_API_KEY
-        valueFrom:
-          secretKeyRef:
-            name: *secret
             key: *name
     extraArgs:
       - --cloudflare-dns-records-per-page=1000
