feat(containers): use contianers i built

--- a/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
@@ -34,8 +34,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/onedr0p/qbittorrent-beta
-              tag: 5.0.3@sha256:4b9de3356475bd97fda3fb4d98f213e8d139aef15e7bd20dab72973e661901dd
+              repository: ghcr.io/solanyn/qbittorrent
+              tag: 5.0.3@sha256:404e5b306a0fa38fc217c96cd22c6ca29d3f527e033186add56d747c89a88ff4
             env:
               TZ: Australia/Sydney
               QBT_WEBUI_PORT: &port 8080
