--- a/kubernetes/apps/default/bazarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/bazarr/app/helmrelease.yaml
@@ -34,8 +34,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/onedr0p/bazarr
-              tag: 1.5.1@sha256:1c88830f3c51fc2f1230ad7040bcbe30f197449ae93f835448cf516d8b7e5e82
+              repository: ghcr.io/solanyn/bazarr
+              tag: 1.5.1@sha256:0321ba65c01026c15901714dd819ca718d100c919409c57dd11fc8570384ee17
             env:
               TZ: Australia/Sydney
             probes:
