--- a/kubernetes/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/default/plex/app/helmrelease.yaml
@@ -36,8 +36,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/onedr0p/plex
-              tag: 1.41.3.9314-a0bfb8370@sha256:cbefe5f2f44d0519fd72985ed4005b7b55a7eb9dcbdcc3b4d6bb7055730db565
+              repository: ghcr.io/solanyn/plex
+              tag: 1.41.3.9314-a0bfb8370@sha256:09ff247069e0e25574cbb99810f95c593d3e54db79ac8b42fa2adcec11476ae1
             env:
               TZ: Australia/Sydney
               PLEX_ADVERTISE_URL: https://plex.goyangi.cloud:443,http://192.168.1.128:32400
