--- a/kubernetes/apps/default/readarr-ab/app/helmrelease.yaml
+++ b/kubernetes/apps/default/readarr-ab/app/helmrelease.yaml
@@ -42,16 +42,16 @@ spec:
               PGID: 1000
           init-db:
             image:
-              repository: ghcr.io/onedr0p/postgres-init
-              tag: 16.6@sha256:a37bbb04a0ea3f15b505c6f97637e7ae89bc66541ae23b8d3848024087980e76
+              repository: ghcr.io/solanyn/postgres-init
+              tag: 16
             envFrom: &envFrom
               - secretRef:
                   name: readarr-ab-secret
         containers:
           app:
             image:
-              repository: ghcr.io/joryirving/readarr-develop
-              tag: 0.4.10.2734@sha256:3ddec6dae2d939e5e730792a301f1fe5467770f99752cef594c340fba6e18c95
+              repository: ghcr.io/solanyn/readarr-develop
+              tag: 0.4.10.2734@sha256:39f122027752f61da43b01bcb737164e5f860620c8239a1d5ce1a5b1edf40081
             env:
               # NOTE: Environment variables only work because onedr0p containers do some cool things to turn ENV variables to config.xml
               READARR__APP__INSTANCENAME: Readarr Audiobooks
