--- a/kubernetes/apps/default/tautulli/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tautulli/app/helmrelease.yaml
@@ -34,8 +34,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/onedr0p/tautulli
-              tag: 2.15.1@sha256:23f248d5f6a887a353fe7fab34fb4c6f2e181ffda0f57e12d299d13620b4efe3
+              repository: ghcr.io/solanyn/tautulli
+              tag: 2.15.1@sha256:48a4898f69dbb23443492005790117954e9a08730e76dadb43c9b376767743fb
             env:
               TZ: Australia/Sydney
               TAUTULLI__PORT: &port 80
