--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -35,7 +35,7 @@ spec:
           app:
             image:
               repository: ghcr.io/solanyn/home-assistant
-              tag: 2025.1.4@sha256:ebb3631dcd18f9e2cef73030e07130cdf6d180b44c37fa388a149fa8cd5588cf
+              tag: 2025.1.4@
             env:
               TZ: Australia/Sydney
               HASS_HTTP_TRUSTED_PROXY_1: 10.42.0.0/16
@@ -69,6 +69,7 @@ spec:
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
         seccompProfile: {type: RuntimeDefault}
+      hostNetwork: true
     service:
       app:
         controller: home-assistant
