--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -1,3 +1,4 @@
+---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2.schema.json
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
@@ -24,8 +25,6 @@ spec:
   dependsOn:
     - name: rook-ceph-cluster
       namespace: rook-ceph
-    - name: volsync
-      namespace: volsync-system
   values:
     controllers:
       home-assistant:
@@ -38,23 +37,34 @@ spec:
               tag: 2025.1.4@sha256:ebb3631dcd18f9e2cef73030e07130cdf6d180b44c37fa388a149fa8cd5588cf
             env:
               TZ: Australia/Sydney
-              HASS_HTTP_TRUSTED_PROXY_1: 10.42.0.0/16
-              HASS_HTTP_TRUSTED_PROXY_2: 192.168.1.0/24
+              HASS_HTTP_TRUSTED_PROXY_1: 192.168.1.0/24
+              HASS_HTTP_TRUSTED_PROXY_2: 10.42.0.0/16
+            envFrom:
+              - secretRef:
+                  name: home-assistant-secret
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
-              capabilities: {drop: ["ALL"]}
+              capabilities: { drop: ["ALL"] }
             resources:
               requests:
-                memory: 256Mi
+                cpu: 10m
               limits:
                 memory: 2Gi
           code-server:
             image:
               repository: ghcr.io/coder/code-server
               tag: 4.96.4@sha256:f93810f7f6636b3af3b1a750faf612349cddb89fbb6d28d69123a214fc75ee9e
-            args: ["--auth", "none", "--user-data-dir", "/config/.vscode", "--extensions-dir", "/config/.vscode", "--port", "12321", "/config"]
+            args: [
+              "--auth", "none",
+              "--user-data-dir", "/config/.vscode",
+              "--extensions-dir", "/config/.vscode",
+              "--port", "12321",
+              "/config"
+            ]
             resources:
+              requests:
+                cpu: 10m
               limits:
                 memory: 512Mi
     defaultPodOptions:
@@ -64,7 +74,7 @@ spec:
         runAsGroup: 1000
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
-        seccompProfile: {type: RuntimeDefault}
+        seccompProfile: { type: RuntimeDefault }
     service:
       app:
         controller: home-assistant
@@ -75,44 +85,41 @@ spec:
             port: 12321
     ingress:
       app:
-        annotations:
-          external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
         className: internal
         hosts:
-          - host: "hass.goyangi.cloud"
+          - host: hass.goyangi.cloud
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
       code-server:
-        annotations:
-          external-dns.alpha.kubernetes.io/target: "internal.goyangi.cloud"
         className: internal
         hosts:
-          - host: "hass-code.goyangi.cloud"
+          - host: hass-code.goyangi.cloud
             paths:
               - path: /
                 service:
                   identifier: app
-                  port: http
+                  port: code-server
     persistence:
       config:
         existingClaim: home-assistant
         globalMounts:
           - path: /config
+      config-cache:
+        existingClaim: home-assistant-cache
+        globalMounts:
+          - path: /config/.venv
       config-logs:
         type: emptyDir
-        sizeLimit: 100Mi
         globalMounts:
           - path: /config/logs
       config-tts:
         type: emptyDir
-        sizeLimit: 1Gi
         globalMounts:
           - path: /config/tts
       tmp:
         type: emptyDir
-        sizeLimit: 1Gi
         globalMounts:
           - path: /tmp
