--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -78,6 +78,9 @@ spec:
     service:
       app:
         controller: home-assistant
+        type: LoadBalancer
+        annotations:
+          lbipam.cilium.io/ips: 192.168.1.140
         ports:
           http:
             port: 8123
