feat(hass): expose homekit bridge port

--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -86,6 +86,9 @@ spec:
             port: 8123
           code-server:
             port: 12321
+          homekit:
+            port: 21063
+            protocol: TCP
     ingress:
       app:
         className: internal
