fix(hass): add udp port

--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -88,6 +88,10 @@ spec:
             port: 12321
           homekit:
             port: 21063
+            protocol: TCP
+          homekit-udp:
+            port: 5353
+            protocol: UDP
     ingress:
       app:
         className: internal
