--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -75,6 +75,7 @@ spec:
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
+      hostNetwork: true
     service:
       app:
         controller: home-assistant
@@ -86,12 +87,6 @@ spec:
             port: 8123
           code-server:
             port: 12321
-          homekit:
-            port: 21063
-            protocol: TCP
-          homekit-udp:
-            port: 5353
-            protocol: UDP
     ingress:
       app:
         className: internal
