--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -83,6 +83,17 @@ spec:
             port: 8123
           code-server:
             port: 12321
+      expose:
+        controller: home-assistant
+        type: LoadBalancer
+        annotations:
+          lbipam.cilium.io/ips: 192.168.1.140
+        ports:
+          homekit:
+            port: 21063
+          mdns:
+            port: 8383
+            protocol: UDP
     ingress:
       app:
         className: internal
