--- a/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/default/home-assistant/app/helmrelease.yaml
@@ -75,22 +75,15 @@ spec:
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
         seccompProfile: { type: RuntimeDefault }
+      hostNetwork: true
     service:
       app:
         controller: home-assistant
-        type: LoadBalancer
-        annotations:
-          lbipam.cilium.io/ips: 192.168.1.140
         ports:
           http:
             port: 8123
           code-server:
             port: 12321
-          homekit:
-            port: 21063
-          mdns:
-            port: 8383
-            protocol: UDP
     ingress:
       app:
         className: internal
