--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - ./autobrr/ks.yaml
   - ./atuin/ks.yaml
   - ./bazarr/ks.yaml
-  # - ./calibre/ks.yaml
+  - ./calibre/ks.yaml
   - ./calibre-web/ks.yaml
   - ./cross-seed/ks.yaml
   - ./echo-server/ks.yaml
