--- a/kubernetes/apps/default/zigbee/app/helmrelease.yaml
+++ b/kubernetes/apps/default/zigbee/app/helmrelease.yaml
@@ -76,9 +76,7 @@ spec:
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
-              capabilities:
-                drop: ["ALL"]
-                add: ["NET_BIND_SERVICE"]
+              capabilities: { drop: ["ALL"] }
             resources:
               requests:
                 cpu: 10m
