--- a/kubernetes/flux/components/gatus/guarded/config.yaml
+++ b/kubernetes/flux/components/gatus/guarded/config.yaml
@@ -1,13 +1,13 @@
 endpoints:
   - name: "${APP}"
     group: guarded
-    url: 8.8.8.8
+    url: 1.1.1.1
     interval: 1m
     ui:
       hide-hostname: true
       hide-url: true
     dns:
-      query-name: "${GATUS_SUBDOMAIN:=${APP}}.${GATUS_DOMAIN:=goyangi.cloud}"
+      query-name: "${GATUS_SUBDOMAIN:=${APP}}.goyangi.cloud"
       query-type: A
     conditions:
       - "len([BODY]) == 0"
