fix(gatus): add guarded pattern

--- a/kubernetes/flux/components/gatus/guarded/config.yaml
+++ b/kubernetes/flux/components/gatus/guarded/config.yaml
@@ -11,5 +11,7 @@ endpoints:
       query-type: A
     conditions:
       - "len([BODY]) == 0"
+      # TODO: for some reason coredns resolves internal ingress cname
+      - "[BODY] == pat(192.168.*)"
     alerts:
       - type: pushover
