fix(gatus): conditions are logical AND

--- a/kubernetes/flux/components/gatus/guarded/config.yaml
+++ b/kubernetes/flux/components/gatus/guarded/config.yaml
@@ -10,8 +10,8 @@ endpoints:
       query-name: "${GATUS_SUBDOMAIN:=${APP}}.goyangi.cloud"
       query-type: A
     conditions:
-      - "len([BODY]) == 0"
       # TODO: for some reason coredns resolves internal ingress cname
+      # - "len([BODY]) == 0"
       - "[BODY] == pat(192.168.*)"
     alerts:
       - type: pushover
