--- a/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbittorrent/app/helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
                 spec:
                   failureThreshold: 30
                   periodSeconds: 10
-            securityContext: &securityContext
+            securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
               capabilities: {drop: ["ALL"]}
@@ -81,7 +81,6 @@ spec:
                 cpu: 10m
               limits:
                 memory: 128Mi
-                # securityContext: *securityContext
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
