--- a/kubernetes/apps/default/kopia/app/externalsecret.yaml
+++ b/kubernetes/apps/default/kopia/app/externalsecret.yaml
@@ -35,7 +35,7 @@ spec:
               "type": "s3",
               "config": {
                 "bucket": "nas",
-                "endpoint": "{{ .CLOUDFLARE_ACCOUNT_TAG }}.r2.cloudflarestorage.com",
+                "endpoint": "25450dc0f239d4e727e3488cfb31b5c4.r2.cloudflarestorage.com",
                 "accessKeyID": "{{ .AWS_ACCESS_KEY_ID }}",
                 "secretAccessKey": "{{ .AWS_SECRET_ACCESS_KEY }}"
               }
