feat(helmfile): bashing a cilium postsync script

--- a/.mise.toml
+++ b/.mise.toml
@@ -1,4 +1,5 @@
 [env]
+KUBERNETES_DIR = '{{config_root}}/kubernetes'
 KUBECONFIG = '{{config_root}}/kubernetes/kubeconfig'
 MINIJINJA_CONFIG_FILE = '{{config_root}}/.minijinja.toml'
 SOPS_AGE_KEY_FILE = '{{config_root}}/age.key'
