--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -9,7 +9,7 @@ tasks:
     desc: Apply Talos config to a node [IP=required]
     cmds:
       - task: down
-      - sops exec-file --input-type yaml --output-type yaml {{.BOOTSTRAP_DIR}}/talos/{{.IP}}.sops.yaml.j2 "minijinja-cli {}" | talosctl --nodes {{.IP}} apply-config --mode={{.MODE}} --file /dev/stdin
+      - sops exec-file --input-type yaml --output-type yaml {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2 "minijinja-cli {}" | talosctl --nodes {{.IP}} apply-config --mode={{.MODE}} --file /dev/stdin
       - talosctl --nodes {{.IP}} health
       - task: up
     vars:
@@ -18,9 +18,9 @@ tasks:
       vars: [IP]
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
-      - test -f {{.BOOTSTRAP_DIR}}/.cluster.env
-      - test -f {{.BOOTSTRAP_DIR}}/talos/{{.IP}}.sops.yaml.j2
-      - test -f {{.CLUSTER_DIR}}/talosconfig
+      - test -f {{.KUBERNETES_DIR}}/bootstrap/.cluster.env
+      - test -f {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2
+      - test -f {{.KUBERNETES_DIR}}/talosconfig
       - which minijinja-cli sops talosctl
   upgrade-node:
     desc: Upgrade Talos on a single node [IP=required]
@@ -31,15 +31,15 @@ tasks:
       - task: up
     vars:
       TALOS_IMAGE:
-        sh: yq '.machine.install.image' {{.BOOTSTRAP_DIR}}/talos/{{.IP}}.sops.yaml.j2 | minijinja-cli
+        sh: yq '.machine.install.image' {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2 | minijinja-cli
     requires:
       vars: [IP]
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
       - talosctl config info
-      - test -f {{.BOOTSTRAP_DIR}}/.cluster.env
-      - test -f {{.BOOTSTRAP_DIR}}/talos/{{.IP}}.sops.yaml.j2
-      - test -f {{.CLUSTER_DIR}}/talosconfig
+      - test -f {{.KUBERNETES_DIR}}/bootstrap/.cluster.env
+      - test -f {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2
+      - test -f {{.KUBERNETES_DIR}}/talosconfig
       - which minijinja-cli talosctl yq
   upgrade-k8s:
     desc: Upgrade Kubernetes across the whole cluster
@@ -53,8 +53,8 @@ tasks:
     preconditions:
       - talosctl --nodes {{.TALOS_CONTROLLER}} get machineconfig
       - talosctl config info
-      - test -f {{.BOOTSTRAP_DIR}}/.cluster.env
-      - test -f {{.CLUSTER_DIR}}/talosconfig
+      - test -f {{.KUBERNETES_DIR}}/bootstrap/.cluster.env
+      - test -f {{.KUBERNETES_DIR}}/talosconfig
       - which jq talosctl
   reboot-node:
     desc: Reboot Talos on a single node [IP=required] [MODE=default]
@@ -70,8 +70,8 @@ tasks:
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
       - talosctl config info
-      - test -f {{.BOOTSTRAP_DIR}}/.cluster.env
-      - test -f {{.CLUSTER_DIR}}/talosconfig
+      - test -f {{.KUBERNETES_DIR}}/bootstrap/.cluster.env
+      - test -f {{.KUBERNETES_DIR}}/talosconfig
       - which talosctl
   shutdown-cluster:
     desc: Shutdown Talos across the whole cluster
@@ -83,7 +83,7 @@ tasks:
     preconditions:
       - talosctl --nodes {{.IP_ADDRS}} get machineconfig
       - talosctl config info
-      - test -f {{.CLUSTER_DIR}}/talosconfig
+      - test -f {{.KUBERNETES_DIR}}/talosconfig
       - which jq talosctl
   reset-node:
     desc: Reset Talos on a single node [IP=required]
@@ -94,7 +94,7 @@ tasks:
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
       - talosctl config info
-      - test -f {{.CLUSTER_DIR}}/talosconfig
+      - test -f {{.KUBERNETES_DIR}}/talosconfig
       - which talosctl
   reset-cluster:
     desc: Reset Talos across the whole cluster
@@ -102,21 +102,21 @@ tasks:
     cmd: talosctl reset --nodes {{.IP_ADDRS}} --graceful=false
     vars:
       IP_ADDRS:
-        sh: talosctl --talosconfig {{.CLUSTER_DIR}}/talosconfig config info --output json | jq --join-output '[.nodes[]] | join(",")'
+        sh: talosctl --talosconfig {{.KUBERNETES_DIR}}/talosconfig config info --output json | jq --join-output '[.nodes[]] | join(",")'
     preconditions:
       - talosctl --nodes {{.IP_ADDRS}} get machineconfig
       - talosctl config info
-      - test -f {{.CLUSTER_DIR}}/talosconfig
+      - test -f {{.KUBERNETES_DIR}}/talosconfig
       - which jq talosctl
   kubeconfig:
     desc: Generate the kubeconfig for a Talos cluster
-    cmd: talosctl kubeconfig --nodes {{.TALOS_CONTROLLER}} --force --force-context-name main {{.CLUSTER_DIR}}
+    cmd: talosctl kubeconfig --nodes {{.TALOS_CONTROLLER}} --force --force-context-name main {{.KUBERNETES_DIR}}
     vars:
       TALOS_CONTROLLER:
         sh: talosctl config info --output json | jq --raw-output '.endpoints[]' | shuf -n 1
     preconditions:
       - talosctl config info
-      - test -f {{.CLUSTER_DIR}}/talosconfig
+      - test -f {{.KUBERNETES_DIR}}/talosconfig
       - which jq talosctl
   apply-cluster:
     desc: Apply Talos config across the whole cluster [MODE=default]
@@ -176,17 +176,17 @@ tasks:
   talosconfig:
     cmds:
       - task: s:decrypt-secrets
-      - yq -r .machine.ca.crt {{.BOOTSTRAP_DIR}}/talos/{{.IP}}.sops.yaml.j2 | base64 -d > ca.crt
-      - yq -r .machine.ca.key {{.BOOTSTRAP_DIR}}/talos/{{.IP}}.sops.yaml.j2 | base64 -d > ca.key
+      - yq -r .machine.ca.crt {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2 | base64 -d > ca.crt
+      - yq -r .machine.ca.key {{.KUBERNETES_DIR}}/bootstrap/talos/{{.IP}}.sops.yaml.j2 | base64 -d > ca.key
       - talosctl gen key --name admin
       - talosctl gen csr --key admin.key --ip 127.0.0.1
       - talosctl gen crt --ca ca --csr admin.csr --name admin --hours 8760
-      - yq eval '.contexts.main.ca = "'"$(cat ca.crt | base64)"'" | .contexts.main.crt = "'"$(cat admin.crt | base64)"'" | .contexts.main.key = "'"$(cat admin.key | base64)"'"' -i {{ .CLUSTER_DIR }}/talosconfig
+      - yq eval '.contexts.main.ca = "'"$(cat ca.crt | base64)"'" | .contexts.main.crt = "'"$(cat admin.crt | base64)"'" | .contexts.main.key = "'"$(cat admin.key | base64)"'"' -i {{ .KUBERNETES_DIR }}/talosconfig
       - task: s:encrypt-secrets
       - rm admin.key ca.crt ca.key admin.csr admin.crt
     vars:
       IP:
-        sh: ls {{.BOOTSTRAP_DIR}}/talos/ | head -n 1 | cut -d '.' -f1-4
+        sh: ls {{.KUBERNETES_DIR}}/bootstrap/talos/ | head -n 1 | cut -d '.' -f1-4
     preconditions:
       - which yq talosctl base64
 
