--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -3,14 +3,14 @@ version: '3'
 set: [pipefail]
 shopt: [globstar]
 vars:
-  CLUSTER_DIR: '{{.ROOT_DIR}}/kubernetes'
-  BOOTSTRAP_DIR: '{{.CLUSTER_DIR}}/bootstrap'
-dotenv: ['{{.BOOTSTRAP_DIR}}/.cluster.env']
+  KUBERNETES_DIR: '{{.ROOT_DIR}}/kubernetes'
+  BOOTSTRAP_DIR: '{{.KUBERNETES_DIR}}/bootstrap'
+dotenv: ['{{.KUBERNETES_DIR}}/bootstrap/.cluster.env']
 env:
-  KUBECONFIG: '{{.CLUSTER_DIR}}/kubeconfig'
+  KUBECONFIG: '{{.KUBERNETES_DIR}}/kubeconfig'
   MINIJINJA_CONFIG_FILE: '{{.ROOT_DIR}}/.minijinja.toml'
   SOPS_AGE_KEY_FILE: '{{.ROOT_DIR}}/age.key'
-  TALOSCONFIG: '{{.CLUSTER_DIR}}/talosconfig'
+  TALOSCONFIG: '{{.KUBERNETES_DIR}}/talosconfig'
 includes:
   b: .taskfiles/bootstrap
   k: .taskfiles/kubernetes
