--- a/kubernetes/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/bootstrap/apps/helmfile.yaml
@@ -24,58 +24,52 @@ releases:
     namespace: kube-system
     chart: cilium/cilium
     version: 1.16.6
-    values: ["../apps/kube-system/cilium/app/helm-values.yaml"]
+    values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/kube-system/cilium/app/helm-values.yaml']
     hooks:
       - events: ["postsync"]
-        command: kubectl
-        args:
-          - apply
-          - --namespace=kube-system
-          - --server-side
-          - --field-manager=kustomize-controller
-          - --kustomize
-          - ../apps/kube-system/cilium/config
-    needs: ["observability/kube-prometheus-stack-crds"]
+        command: bash
+        args: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/scripts/cilium-postsync.sh']
+    needs: ['observability/kube-prometheus-stack-crds']
 
   - name: coredns
     namespace: kube-system
     chart: oci://ghcr.io/coredns/charts/coredns
     version: 1.39.0
-    values: ["../apps/kube-system/coredns/app/helm-values.yaml"]
-    needs: ["kube-system/cilium"]
+    values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/kube-system/coredns/app/helm-values.yaml']
+    needs: ['kube-system/cilium']
 
   - name: cert-manager
     namespace: cert-manager
     chart: jetstack/cert-manager
     version: v1.16.3
-    values: ["../apps/cert-manager/cert-manager/app/helm-values.yaml"]
-    needs: ["kube-system/coredns"]
+    values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/cert-manager/cert-manager/app/helm-values.yaml']
+    needs: ['kube-system/coredns']
 
   - name: external-secrets
     namespace: external-secrets
     chart: oci://ghcr.io/external-secrets/charts/external-secrets
     version: 0.13.0
-    values: ["../apps/external-secrets/external-secrets/app/helm-values.yaml"]
-    needs: ["cert-manager/cert-manager"]
+    values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/external-secrets/external-secrets/app/helm-values.yaml']
+    needs: ['cert-manager/cert-manager']
 
   - name: wipe-rook
     namespace: kube-system
     chart: oci://ghcr.io/bjw-s/helm/app-template
     version: 3.6.1
-    values: ["./templates/wipe-rook.yaml.gotmpl"]
-    needs: ["external-secrets/external-secrets"]
+    values: ['{{ requiredEnv "KUBERNETES_DIR" }}/bootstrap/apps/templates/wipe-rook.yaml.gotmpl']
+    needs: ['external-secrets/external-secrets']
 
   - name: flux-operator
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.13.0
-    values: ["../apps/flux-system/flux-operator/app/helm-values.yaml"]
-    needs: ["kube-system/wipe-rook"]
+    values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/flux-system/flux-operator/app/helm-values.yaml']
+    needs: ['kube-system/wipe-rook']
 
   - name: flux-instance
     namespace: flux-system
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
     version: 0.13.0
     wait: false
-    values: ["../apps/flux-system/flux-operator/instance/helm-values.yaml"]
-    needs: ["flux-system/flux-operator"]
+    values: ['{{ requiredEnv "KUBERNETES_DIR" }}/apps/flux-system/flux-operator/instance/helm-values.yaml']
+    needs: ['flux-system/flux-operator']
