chore(qbtools): add data

--- a/kubernetes/flux/components/sops/secret.sops.yaml
+++ b/kubernetes/flux/components/sops/secret.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: sops-age
 stringData:
-  age.agekey: ENC[AES256_GCM,data:P4ZuQ2yHlxWnL5GV9DhB9tfi9K07tnzaOXp4ck+16q+dxUcZ1DEoSUmGjwF69yg7r1ezmhUnB6MspDbrbWnF/fNFoNZEWxzgvzk=,iv:NJ8tRezRipSHvXuJDnSQzrbMrRLcBPZOHKxCatxKNhY=,tag:qF+XndsZwVaKCBKtLWxJng==,type:str]
+  age.agekey: ENC[AES256_GCM,data:yJyXL1MTyGaWdsX/rMKf87oMf6nH43iod+YCplxI1btOGML6QA53Js4z+T1aWx70I2xJzv7w2U1fDaTkDYrtHFLlgONnKdJ/Iwk=,iv:Ie67/d/0N5mAK6Kz1BUepgJqfSAc2DqAKtB91eCIOhQ=,tag:ROwSys6SvnbBNzMG2+nU9A==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,14 +13,15 @@ sops:
     - recipient: age1yq7xwc03yg7gp2ew9k3jehrz6ctlmuwsffypwvskvl27e26frqmqa5d7de
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGQWZpcEcxeDlWRDBPYjZr
-        NWRqb0E5Q2lJV0NpVlp6OEhrTTBtRTAvcHdnCmhwbXZKWkthY0k1d2hrODQrTTlj
-        Z1ZPY0VlZTBuanJCN2VQaVU4S3pnZ0kKLS0tIGYxQXRPUGZHNVIya3ZPTGw2Skpy
-        cEF4VklzYXN6S0hPdGE0cTdjMGtNd3cKGlH3UdY6+wdWo17wcwMqJ0t6GemHk3lM
-        71SLJsHgDiHdAsVBRVuTrttY1G/UrVgLdLXhFOv8cTq3bqePc41GRQ==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzZ3BoUGd0MEc5ZnVFdlh6
+        V1FMM1NyZjJ3WVMveVkzMTRCdzh4UHcvSDI0CjNLSHlCMml4N3BOVUJLazdKbUFS
+        N1dYSnNNVmdNdEVqNk0wS0RkQitPdG8KLS0tIG9zZUozOFVJUzdRUnEreTVXcXJw
+        UUxtTGwrUGQ4STExTVdDUzBIVUdMMGcKzorVQ0cEZinyDYb5uSHZZ7luVwqXErJH
+        B7ArvXWQlCj7tMAqdQmGSobGBN5toT7HZQ96I1WuHxpIBYonB0Um9A==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-01-31T08:05:42Z"
-  mac: ENC[AES256_GCM,data:RGH+byHG3krDGdxKuqbhvoWlNyQgy0jFrbg4U1tO7RSm2cdiKe9+fdyLCyTvRMLqwt5jd6BjVJFrB/mGCCi4Qge4lr9TYeex6gM5zmaaI+qFPFTcVdz/KSc48GL9fGSJHJWpKhZBbAA1E79XSrga/uUJBkbBwKNjsLzjp8s82c4=,iv:j/Rgzh+w7D9OTlWRNBI/qb3X25LqT0CJm5GDPBSyOYk=,tag:NWsm7ZocA4UIUWtByZDsrA==,type:str]
+  lastmodified: "2025-02-04T09:10:42Z"
+  mac: ENC[AES256_GCM,data:r77l2I0JYqjxIuSzmqPZ+RCOpksQPYdudOFL1pRa414Ilihox/eKVUBeY4bHblVhmF7WSaAjaA0BQCcsjvOXfajBgzQ49APkNQz52djvrmB3GjPiuQIfyQqnf9rvQ4LGA45PIa5aHkd249YVxrVp24xGsGtAC18V/OLfVfPPoMk=,iv:3kPGFtAokrHZAHm11dCxX1Sx/ekHLOQeAemltM/3qFQ=,tag:hXaA8jeZ0Tbac91Pnw1oGg==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
+  mac_only_encrypted: true
   version: 3.9.3
