--- a/kubernetes/apps/external-secrets/kustomization.yaml
+++ b/kubernetes/apps/external-secrets/kustomization.yaml
@@ -1,12 +1,13 @@
+---
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: external-secrets
-resources:
-  - ./external-secrets/ks.yaml
-  - ./onepassword/ks.yaml
 components:
   - ../../flux/components/alerts
   - ../../flux/components/namespace
   - ../../flux/components/sops
-
+  - ../../flux/components/substitutions
+resources:
+  - ./external-secrets/ks.yaml
+  - ./onepassword/ks.yaml
