--- a/kubernetes/apps/kubeflow-system/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kustomization.yaml
@@ -3,9 +3,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: kubeflow-system
-resources: []
 components:
   - ../../flux/components/alerts
   - ../../flux/components/namespace
   - ../../flux/components/sops
-
+  - ../../flux/components/substitutions
+resources: []
