--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -1,6 +1,13 @@
+---
+# yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: observability
+components:
+  - ../../flux/components/alerts
+  - ../../flux/components/namespace
+  - ../../flux/components/sops
+  - ../../flux/components/substitutions
 resources:
   - ./unpoller/ks.yaml
   - ./kube-prometheus-stack/ks.yaml
@@ -12,8 +19,3 @@ resources:
   - ./smartctl-exporter/ks.yaml
   - ./speedtest-exporter/ks.yaml
   - ./kromgo/ks.yaml
-components:
-  - ../../flux/components/alerts
-  - ../../flux/components/namespace
-  - ../../flux/components/sops
-
