--- a/kubernetes/apps/database/kustomization.yaml
+++ b/kubernetes/apps/database/kustomization.yaml
@@ -10,6 +10,6 @@ components:
   - ../../flux/components/substitutions
 resources:
   - ./cloudnative-pg/ks.yaml
+  - ./dragonfly/ks.yaml
   - ./emqx/ks.yaml
-  # NOTE: can't configure cpu requests, so deploy when more nodes
   # - ./moco/ks.yaml
