--- a/kubernetes/apps/database/dragonfly/cluster/gatus.yaml
+++ b/kubernetes/apps/database/dragonfly/cluster/gatus.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: postgres-gatus-ep
+  name: dragonfly-gatus-ep
   labels:
     gatus.io/enabled: "true"
 data:
