--- a/kubernetes/apps/database/moco/cluster/gatus.yaml
+++ b/kubernetes/apps/database/moco/cluster/gatus.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: redis-gatus-ep
+  name: mysql-gatus-ep
   labels:
     gatus.io/enabled: "true"
 data:
   config.yaml: |
     endpoints:
-      - name: redis
+      - name: mysql
         group: infrastructure
-        url: tcp://dragonfly.database.svc.cluster.local:6379
+        url: tcp://moco-mysql-primary.database.svc.cluster.local:3306
         interval: 1m
         ui:
           hide-url: true
