--- a/kubernetes/apps/database/moco/cluster/cluster.yaml
+++ b/kubernetes/apps/database/moco/cluster/cluster.yaml
@@ -23,7 +23,7 @@ spec:
             cpu: 10m
           limits:
             memory: 1Gi
-    overwriteContainer:
+    overwriteContainers:
       - name: agent
         resources:
           requests:
