feat: deploy mysql-operator

--- a/kubernetes/apps/database/mysql/app/externalsecret.yaml
+++ b/kubernetes/apps/database/mysql/app/externalsecret.yaml
@@ -13,10 +13,11 @@ spec:
       data:
         MINIO_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
         MINIO_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
-        MYSQL_SUPER_USER: "{{ .MYSQL_SUPER_USER }}"
-        MYSQL_SUPER_PASS: "{{ .MYSQL_SUPER_PASS }}"
+        rootUser: "{{ .MYSQL_SUPER_USER }}"
+        rootHost: "%"
+        rootPassword: "{{ .MYSQL_SUPER_PASS }}"
   dataFrom:
     - extract:
         key: minio
     - extract:
-        key: moco
+        key: mysql
