--- a/kubernetes/flux/meta/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/meta/repositories/helm/kustomization.yaml
@@ -23,6 +23,7 @@ resources:
   - ./kafka.yaml
   - ./metrics-server.yaml
   - ./moco.yaml
+  - ./mysql.yaml
   - ./node-feature-discovery.yaml
   - ./openebs.yaml
   - ./piraeus.yaml
