--- a/kubernetes/apps/database/mysql/app/helmrelease.yaml
+++ b/kubernetes/apps/database/mysql/app/helmrelease.yaml
@@ -6,11 +6,11 @@ spec:
   interval: 30m
   chart:
     spec:
-      chart: moco
-      version: 0.15.1
+      chart: mysql-operator
+      version: 9.2.0-2.2.3
       sourceRef:
         kind: HelmRepository
-        name: moco
+        name: mysql
         namespace: flux-system
   install:
     remediation:
@@ -20,8 +20,4 @@ spec:
     remediation:
       strategy: rollback
       retries: 3
-  values:
-    replicaCount: 1
-    resources:
-      requests:
-        cpu: 10m
+
