--- a/kubernetes/apps/database/mysql/cluster/gatus.yaml
+++ b/kubernetes/apps/database/mysql/cluster/gatus.yaml
@@ -9,7 +9,7 @@ data:
     endpoints:
       - name: mysql
         group: infrastructure
-        url: tcp://moco-mysql-primary.database.svc.cluster.local:3306
+        url: tcp://mysql.database.svc.cluster.local:3306
         interval: 1m
         ui:
           hide-url: true
