--- a/kubernetes/apps/database/mysql/app/externalsecret.yaml
+++ b/kubernetes/apps/database/mysql/app/externalsecret.yaml
@@ -2,13 +2,13 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: moco
+  name: mysql
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    name: moco-secret
+    name: mysql-secret
     template:
       data:
         MINIO_ACCESS_KEY_ID: "{{ .MINIO_ROOT_USER }}"
