--- a/kubernetes/apps/database/mysql/ks.yaml
+++ b/kubernetes/apps/database/mysql/ks.yaml
@@ -34,7 +34,7 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: moco
+    - name: mysql
   interval: 30m
   path: ./kubernetes/apps/database/mysql/cluster
   prune: true
