feat(talos): update config

--- a/kubernetes/flux/components/substitutions/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/components/substitutions/cluster-secrets.sops.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: cluster-secrets
 stringData:
-  SECRET_EXAMPLE: ENC[AES256_GCM,data:eZlHj7In7R4f+P/QkA==,iv:wpz+VWgSo1fhaaNtJ4jtghXPEjMxyllTxGDYNSI9fBo=,tag:YOYERfwIJzrfQuyZxsswrQ==,type:str]
+  SECRET_EXAMPLE: ENC[AES256_GCM,data:akuozaR/J2YjFGqmkA==,iv:0+Oz2/Lam85wOGK+mqyW309tWK8AAj4YWTlgv4BM1Nc=,tag:YMTyej8A3DB5N3ltOI4ULA==,type:str]
 sops:
   kms: []
   gcp_kms: []
@@ -13,15 +13,15 @@ sops:
     - recipient: age1yq7xwc03yg7gp2ew9k3jehrz6ctlmuwsffypwvskvl27e26frqmqa5d7de
       enc: |
         -----BEGIN AGE ENCRYPTED FILE-----
-        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnd254MlFxRitSYzgydXlT
-        NlpNK1Q5TkYzano3ZU1qYjZKNWZPMnRZS1NzCklzTXU4MElOdGI5M21nbDd2a0xK
-        b2xxWDBRNEFWaGkvcU5NN3VyQnBaUW8KLS0tIFVuWEJUUEFFb2hXTlU5UFJRQjBS
-        RkpEZ2ZoRWc0NTR3dzVnNldvcDl4alEK0XwzWUoQe+WboMZ7VtFmjHBB3hbldZdb
-        OGgNeDUb6QcCc99BNDQZA18/rvQL6dnJ0rE17Ohu7efOiX/g+3Oc4w==
+        YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFaVU4NExlODhzNkNuOE1U
+        UUZLOGhmeXkyL3VEWVVpN3hHTHpxc0E0bkEwCm9naWxHd2ZQVWJZOHc1c2k2TGhB
+        NzdLaDU2dmFLT3pBRGNKRDZkWnNIVmsKLS0tIElaTmtzUnlQSkF1VmhiWlVydEh6
+        OVdrVGtSYWlwRWZ2TjNPV0E4UTljaW8KmfJirX/jbHvqk6bDCCpYUzSVGeYN+D4K
+        13YXr/8HIWDR17DfvJoJwKNASR8y061PJWbKbH6a/u7ODWVlRxSvkA==
         -----END AGE ENCRYPTED FILE-----
-  lastmodified: "2025-02-05T09:58:05Z"
-  mac: ENC[AES256_GCM,data:pGIWMS7467zcCezYQXn9ntz3H98oCcwvilCPOUKX03Eo4pAHjuJ0S5D02sQcSiiw2/rFRiwaS/jFuwCf6Hf9QYe99YFZFMjylW19CgvvB5GF5TkwCKRD23ChTdu0MVWFeVSeheV/PyjX5claOaj8dOjVr3Nu8eV02V61vqLTtNQ=,iv:eHRGNEJTVMfCWzoVNC5PwrXz7ITu4YkVQ0o/6UicN8g=,tag:fLgOe8e8nsmmfqPk/IxOBw==,type:str]
+  lastmodified: "2025-02-06T12:41:45Z"
+  mac: ENC[AES256_GCM,data:Vo4qw59rzuU2Mm537fpR9tqYIkkrGR4FZa3SGmiK2/JLyO2S+VNQEXxLGPnyDeGE+PrWNBd/UWoL6JNMmufcMgbhyjaVWyK7EIZ8dbbBAXKmswrYiKf1+4qXQR2ftdZdJRVvLq03O3sBBQxcfgrJki4zriNPloLwSQaAyUh/DxY=,iv:1YqlNjxnuFzpHCV3Htv56yO9/CiDi2/4jrSPsVaAVmA=,tag:mIRZPikEQzaQeJc0WBflFw==,type:str]
   pgp: []
   encrypted_regex: ^(data|stringData)$
   mac_only_encrypted: true
-  version: 3.9.3
+  version: 3.9.4
