fix(mysql): lower case variables maybe

--- a/kubernetes/apps/database/mysql/app/externalsecret.yaml
+++ b/kubernetes/apps/database/mysql/app/externalsecret.yaml
@@ -11,8 +11,8 @@ spec:
     name: mysql-secret
     template:
       data:
-        AWS_SECRET_KEY_ID: "{{ .MINIO_ROOT_USER }}"
-        AWS_SECRET_ACCESS_KEY: "{{ .MINIO_ROOT_PASSWORD }}"
+        aws_access_key_id: "{{ .MINIO_ROOT_USER }}"
+        aws_secret_access_key: "{{ .MINIO_ROOT_PASSWORD }}"
         rootUser: "{{ .MYSQL_SUPER_USER }}"
         rootHost: "%"
         rootPassword: "{{ .MYSQL_SUPER_PASS }}"
