--- a/kubernetes/flux/meta/repositories/helm/mariadb.yaml
+++ b/kubernetes/flux/meta/repositories/helm/mariadb.yaml
@@ -4,7 +4,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: mariadb
+  name: mariadb-operator
   namespace: flux-system
 spec:
   interval: 12h
