fix(mariadb): protocol should not be part of s3 endpoint

--- a/kubernetes/apps/database/mariadb/cluster/backup.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/backup.yaml
@@ -13,7 +13,7 @@ spec:
   storage:
     s3:
       bucket: mariadb
-      endpoint: http://minio.default.svc.cluster.local:9000
+      endpoint: minio.default.svc.cluster.local:9000
       region: us-east-1
       accessKeyIdSecretKeyRef:
         name: mariadb-secret
